--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/taluoo/app-archive#readme",
   "dependencies": {
+    "@taluoo/node-clone-url": "^1.1.0",
+    "@taluoo/node-line-reader": "^1.1.1",
+    "chalk": "^2.4.1",
+    "moment": "^2.22.1",
     "puppeteer": "^1.3.0"
   }
 }
